--- a/src/styles.css
+++ b/src/styles.css
@@ -7,10 +7,15 @@
 body, html{
     height: 100%;
 }
+.alert{
+    position: absolute;
+    width: 100%;
+    z-index: 9999;
+}
 
 .banner{
     font-family: 'RobotoCondensed';
-    font-size: 44px;
+    font-size: 56px;
 }
 
 .navbar{
@@ -78,17 +83,17 @@ body, html{
         background-position: center;
         background-repeat: repeat-x;
         background-size: cover;
+        background-attachment: fixed;
 }
 
 .intro{
-    padding-top:20%;
+padding-top: 2200px;
     color: white;
-    vertical-align: middle;
 }
 
 .intro_content{
     font-family: 'Roboto', sans-serif;
-    font-size: 22px;
+    font-size: 26px;
     opacity: 0.5;
 }
 
